--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,6 @@
 {
 	"tasks": {
 		"test": "deno test --env-file --unstable-sloppy-imports --no-check --allow-net --allow-env"
+		"dev": "next dev --turbopack --experimental-https"
 	}
 }
